--- a/README
+++ b/README
@@ -1,4 +1,6 @@
-Pozn.: Kvůli rozsáhlosti aplikace a nedostatku času chybí některé fíčury (úprava záznamů, přidání záznamů ze souboru, nějaké roszáhlejší chybové hlášky)
+Pozn.: Kvůli rozsáhlosti aplikace a nedostatku času chybí některé fíčury (úprava záznamů, přidání záznamů ze souboru, nějaké rozsáhlejší chybové hlášky)
+Chtěl jsem si vyzkoušet pár věci a trochu vytvořit trochu extensivnější aplikaci a nějak jsem si nespočítal, kolik na to budu potřebovat času...
+Tady je odkaz na github: https://github.com/kakalasek/Database_application.git
 
 Jak to zprovoznit?
 ==================
